# tease-the-landlord

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  card.cpp  game.cpp  human.cpp  main.cpp  robot.cpp
assets/: res.qrc  res.rc
include/: card.h  deck.h  game.h  handtype.h  human.h  player.h  robot.h
src/: arbiter.h  card.cpp  card.h  cardgroup.cpp  cardgroup.h  cards.cpp  cards.h  deck.h  game.cpp  game.h  human.h  humanplayer.cpp  humanplayer.h  main.cpp  player.cpp  player.h  robot.cpp  robot.h  robotplayer.cpp  robotplayer.h  scene.cpp  scene.h  winmain.cpp  winmain.h
src/ui/: scene.cpp  scene.h
